--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,15 +1,19 @@
 <%- include('partials/header') -%>
-  <div class="container">
-    <div class="row justify-content-center mt-5">
-      <ul class="row list-unstyled">
-        <% for(var i=0; i<posts.length; i++) {%>
-          <li class="col-6 justify-content-between mt-5">
-            <a href="/post/<%= posts[i]._id%>">
-              <img class="img-fluid" src="<%= posts[i].image%>">
-            </a>
-          </li>
-        <% } %>
-        </ul>
-    </div>
-  </div>  
+<div class = "mainDiv">
+  <h1>Wellness App</h1>
+      <ul class = "activities">
+          <% for(let i = 0; i < posts.length; i++) {%>
+              <li class="activity">
+                  <span><%= posts[i].activityName %></span>
+                  <span class="time"><%= posts[i].time %> min</span>
+              </li>
+          <% } %>
+      </ul>
+      <h2>Choose activity:</h2>
+      <form action = "/post/createPost" enctype="multipart/form-data" method="POST">
+          <input type = "text" placeholder="activity" name="activityName">
+          <input type="number" placeholder="time by minutes" name="time">
+          <input type="submit">
+      </form>
+  </div>
 <%- include('partials/footer') -%>
