--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,8 @@
 
 <main class="container">
     <div class="row justify-content-around mt-5">
-        <a href="/login" class="col-3 btn btn-primary"> Login</a>
-        <a href="/signup" class="col-3 btn btn-primary"> Signup</a>
+        <a href="/login" class="col-3 btn btn-secondary"> Login</a>
+        <a href="/signup" class="col-3 btn btn-secondary"> Signup</a>
     </div>
 </main>
     
