--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Binary Upload Boom</title>
+    <title>Mindful Wellness</title>
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/imgs/favicon-32x32.png"
+      href="/imgs/succ.jpeg"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -29,9 +29,9 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <header class="container">
+    <header class="header-h1">
       <div class="text-center">
-        <h1 class=""><a href="/profile">Wellness App</a></h1>
+        <h1 ><a  class="text-decoration-none text-muted" class = "" href="/profile">Wellness App</a></h1>
       </div>
     </header>
   </body>
