--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -25,11 +25,10 @@
       </div>
       <div class="col-6">
         <ul class="row list-unstyled">
+
         <% for(var i=0; i<posts.length; i++) {%>
           <li class="col-6 justify-content-between mt-5">
-            <a href="/post/<%= posts[i]._id%>">
-              <img class="img-fluid" src="<%= posts[i].image%>">
-            </a>
+            <span><%= posts[i].goalName %></span>
           </li>
         <% } %>
         </ul>
