--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,7 +5,7 @@
           <div>
               <p><strong>User Name</strong>: <%= user.userName %></p>
               <p><strong>Email</strong>: <%= user.email %></p>
-   
+
               <a href="/logout" class="col-3 btn btn-primary">Logout</a>
           </div>
           <div class="mt-5">
@@ -27,14 +27,16 @@
       <div class="col-6">
         <ul class="row list-unstyled">
 
-        <% for(var i=0; i<posts.length; i++) {%>
-          <li class="col-6 justify-content-between mt-5">
-            <span><%= posts[i].goalName %></span>
-          </li>
-        <% } %>
         </ul>
         <div class="row justify-content-center mt-5">
           <a class="btn btn-primary" href="/feed">Return to Feed</a>
+          <h1>Goals for the week</h1>
+          <ul>
+            <% goals.forEach(function(goal) { %>
+            <li><%= goal.goalName%>: <%= goal.time %>  hr </li> 
+           <% }) %>
+          </ul>
+
         </div>  
       </div>  
     </div>
